<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <!-- Главный экран -->
    <item
        android:id="@+id/action_home"
        android:icon="@drawable/home"
        android:title="@string/menu_home" />

    <!-- Избранное -->
    <item
        android:id="@+id/action_favorites"
        android:icon="@drawable/favorite"
        android:title="@string/menu_favorites" />

    <!-- Настройки -->
    <item
        android:id="@+id/action_settings"
        android:icon="@drawable/settings"
        android:title="@string/menu_settings" />

    <!-- О приложении -->
    <item
        android:id="@+id/action_about"
        android:icon="@drawable/info"
        android:title="@string/menu_about" />

</menu>